@@ -7,6 +7,8 @@ Additions
 n/a
 
 Changes
+09/02/22 r247 Fixed sending broken CAPAB message to Plexus3
+09/02/22 r247 Workaround for missing EOB in Charybdis and NGircd
 09/02/19 r244 Fixed Plexus3 TOPIC, KILL, NICK, EOB handling and chanmode +z
 09/02/17 r242 Fixed handling of Plexus3 UID message in TS6 mode
 09/02/17 r242 Added missing TMODE implementation in Plexus3
